Update web app UI

--- a/emscripten/app/styles/style.css
+++ b/emscripten/app/styles/style.css
@@ -5,8 +5,8 @@ body {
 
 @media (prefers-color-scheme: dark) {
   body {
-    color: goldenrod;
-    background-color: black;
+    color: #D9933D;
+    background-color: #222;
   }
 }
 
@@ -18,6 +18,17 @@ body {
 
 .container * {
   box-sizing: border-box;
+}
+
+.columns {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 100%;
+  margin-bottom: 2rem;
+}
+.column {
+  flex: 50%;
 }
 
 .flex-outer {
@@ -79,4 +90,9 @@ body {
   color: goldenrod;
   letter-spacing: .09em;
   border-radius: 2px;
+}
+
+.flex-outer li div.indicator {
+  width: 2em;
+  text-align: center;
 }
