--- a/web/app/styles/style.css
+++ b/web/app/styles/style.css
@@ -25,8 +25,7 @@ canvas {
 
 .columns {
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  flex-flow: row wrap;
   width: 100%;
   margin-bottom: 32px;
 }
